# code-savant.nvim

./: AGENT_GUIDELINES.md  pyproject.toml  system_architecture.json
dev_docs/: gemini_cli_architecture_map.md  implementation_plan_subagents.md  initial_ux_architecture.md  search_tool_impl.md  stuff_i_want.txt  subagents_nesting_design.md  task.md  tools_comparison.md  uds_daemon_architecture.md  uds_server_implementation_plan.md
dev_tools/: launch_test.sh
engine/: cli_harness.py  constants.py  main.py  pyproject.toml  sessions.py  skills.py  todo_test.py
engine/prompts/: loader.py
engine/prompts/agents/: codebase_investigator.agent.yaml  coder.agent.yaml  generalist.agent.yaml
engine/prompts/templates/: git_repo.md  (+3 more)
engine/tests/: test_prompt_system.py  test_session_and_client.py
lua/code_savant/: init.lua  layout.lua  navigation.lua  network.lua  ui.lua
plugin/: code_savant.lua
src/engine/: agents.py  bundled_models.json  bus.py  cli_harness.py  client.py  config.py  constants.py  context.py  default_settings.json  executor.py  guards.py  main.py  memory.py  mock_executor.py  registry.py  sessions.py  subagents.py  timer.py  todo_test.py  tools.py  types.py  uds_server.py
tests/: simulate_startup.lua  test_bus.py  test_client_init.lua  test_client_layout.lua  test_client_navigation.lua  test_client_network.lua  test_client_protection.lua  test_client_sessions.lua  test_client_text_objects.lua  test_client_ui.lua  test_config.py  test_json_rpc_codec.py  test_mock_executor.py  test_prompt_system.py  test_session_and_client.py  test_uds_server.py
(+14 files in other folders)
