[project]
name = "code-savant-engine"
version = "0.1.0"
description = "JSON-RPC daemon and Neovim editor client background engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "google-genai>=2.6.0",
    "mcp>=1.27.1",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
]

[project.scripts]
code-savant-engine = "engine.main:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/engine"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
